# solc-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.agents/docs/: serde-error-handling.md  serde-impl-deserializer.md  solidity-using-the-compiler.md
.agents/instructions/: changelog.md
.agents/plans/: 002-implement-elementary-type-name.md
.github/: copilot-instructions.md
.zed/agent/docs/: SolidityParser.g4.md  solidity-contract-abi-spec.md
.zed/agent/instructions/: create-git-commit-message.md
.zed/agent/plans/: 001-refactor-input-to-standard-json-input.md  003-implement-identifier-and-source-location.md  004-implement-identifierpath-node.md  (+3 more)
fixtures/: standard-json-input-covenant-data-provider.json  standard-json-input-covenant-latent-swap-lex.json  standard-json-input-covenant-no-delegate-call.json  standard-json-input-covenant-pyth-oracle.json  standard-json-input-covenant-synth-token.json  standard-json-input-covenant.json
fixtures/abi/: from_foundry.py
fixtures/ast/: README.md  covenant-chainlink-oracle.json  covenant-cross-adapter.json  covenant-curator.json  covenant-data-provider.json  covenant-latent-swap-lex.json  covenant-no-delegate-call.json  covenant-pyth-oracle.json  covenant-synth-token.json  covenant.json  from_foundry.py  inspect_node.py  node_stats.py
fixtures/standard-json-input/: covenant-chainlink-oracle.json  covenant-cross-adapter.json  covenant-curator.json
src/: abi.rs  ast.rs  input.rs  lib.rs  standard_json_input.rs
src/ast/: common.rs  error.rs  identifier.rs  mod.rs  types.rs
(+696 files in other folders)
