[package]
name = "solc"
description = "Solidity compiler bindings for Rust"
version = "0.0.4"
license = "MIT"
repository = "https://github.com/bidentxyz/solc-rs"
edition = "2024"

[dependencies]
# Error
thiserror = "2"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
walkdir = "2.5.0"
serde_path_to_error = "0.1"
